<resources>
    <string name="app_name">Yummy Asia</string>
    <string name="welcome">Welcome to Yummy Asia</string>
    <string name="button_start">Let\'s start</string>
    <string name="search_recipe">Search for a recipe</string>
    <string name="app_desc_search">Press the search button for ideas for your dish. Choose type of the dish and basic ingredient to find the yummiest recipes.</string>
    <string name="app_desc_random">Press the random button to get one of the craziest asian recipes. Will you dare?</string>
    <string name="app_desc_add_recipe">Press the add button to share yummy recipes with others!</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="tab_text_1">SEARCH RECIPE</string>
    <string name="tab_text_2">RANDOM</string>
    <string name="tab_text_3">ADD RECIPE</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="btn_add_recipe">Add recipe</string>
    <string name="btn_random_recipe">Random Recipe</string>
    <string name="btn_search_recipe">Search recipe</string>
    <string name="recipe_description">Description</string>
    <string name="btn_look_for_a_recipe">Look for a recipe</string>
    <string name="btn_display_all_recipes">Display all recipes</string>
    <string name="recipe_name">Recipe name</string>
    <string name="bckg_img">Background Image</string>
    <string name="search_by_name">Search recipe</string>
    <array name="type_spinner">
        <!-- <item>-Choose type-</item> -->
        <item>Cappuccino</item>
        <item>Espresso</item>
        <item>Mocha</item>
        <item>Caffè Americano</item>
        <item>Cafe Zorro</item>
    </array>

    <array name="theme_spinner">
        <!-- <item>-Choose theme-</item>   -->
        <item>Kookie</item>
        <item>Hobi</item>
        <item>Mochi</item>
        <item>Jin</item>
        <item>Joon</item>
        <item>Tae</item>
        <item>Yoongi</item>
    </array>

    <array name="main_ingr_spinner">
        <!--   <item>-Choose main ingredient-</item>  -->
        <item>Hyungwon</item>
        <item>Shownu</item>
        <item>Wonho</item>
        <item>Kihyun</item>
        <item>Changkyun</item>
        <item>Jooheon</item>
        <item>Minhyuk</item>
    </array>

    <array name="add_ingr_spinner">
        <!--  <item>-Choose additional ingredient-</item>  -->
        <item>Bam</item>
        <item>Jackson</item>
        <item>Mark</item>
        <item>Yugyeom</item>
        <item>Jaebum</item>
        <item>Youngjae</item>
        <item>Jinyoung</item>
        <item>Youngjae</item>
        <item>Jinyoung</item>
    </array>

    <array name="add2_ingr_spinner">
        <!--  <item>-Choose additional ingredient-</item>  -->
        <item>Bam</item>
        <item>Jackson</item>
        <item>Mark</item>
        <item>Yugyeom</item>
        <item>Jaebum</item>
        <item>Youngjae</item>
        <item>Jinyoung</item>
        <item>Youngjae</item>
        <item>Jinyoung</item>
    </array>

    <string name="step1">Step 1</string>
    <string name="step2">Step 2</string>
    <string name="step3">Step 3</string>
    <string name="step4">Step 4</string>
    <string name="step5">Step 5</string>

    <string name="steps">Write your recipe in 5 steps: </string>
</resources>
